--- a/SukiUI/Controls/SukiSideMenuItem.axaml
+++ b/SukiUI/Controls/SukiSideMenuItem.axaml
@@ -77,14 +77,14 @@
 
                     </Panel>
                 </Border>
-                    <Panel Name="PSearch" x:DataType="suki:SukiSideMenuService" DataContext="{x:Static suki:SukiSideMenuService.Instance}">
+                    <!--<Panel Name="PSearch" x:DataType="suki:SukiSideMenuService" DataContext="{x:Static suki:SukiSideMenuService.Instance}">
                         <Border.MaxHeight>
                             <MultiBinding Converter="{x:Static suki:SideMenuSearchToVisibilityConverter.Instance}">
                                 <Binding Path="Search"  ></Binding>
                                 <TemplateBinding Property="Header"></TemplateBinding>
                             </MultiBinding>
                         </Border.MaxHeight>
-                    </Panel>
+                    </Panel>-->
                     
                 </Panel>
             </ControlTemplate>
