--- a/SukiUI/Theme/ToolTipStyle.axaml
+++ b/SukiUI/Theme/ToolTipStyle.axaml
@@ -2,7 +2,7 @@
     <ControlTheme x:Key="SukiToolTipTheme" TargetType="ToolTip">
         <Setter Property="Foreground" Value="{DynamicResource SukiText}" />
         <Setter Property="Background" Value="{DynamicResource SukiCardBackground}" />
-        <Setter Property="Margin" Value="15,15" />
+        <Setter Property="Margin" Value="5,5" />
         <Setter Property="Padding" Value="16,8" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -10,8 +10,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Border BoxShadow="{DynamicResource SukiPopupShadow}" Margin="{TemplateBinding Margin}"
+                    <Border Margin="{TemplateBinding Margin}"
                             Background="{TemplateBinding Background}"
+                            BoxShadow="{DynamicResource SukiPopupShadow}"
                             CornerRadius="12">
                         <ContentPresenter Name="ContentPresenter"
                                           Margin="{TemplateBinding Padding}"
