--- a/SukiUI/Theme/AutoCompleteBoxStyles.axaml
+++ b/SukiUI/Theme/AutoCompleteBoxStyles.axaml
@@ -1,4 +1,6 @@
-﻿<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:suki="clr-namespace:SukiUI.Controls">
     <Design.PreviewWith>
         <Border Width="300"
                 Padding="20"
@@ -10,7 +12,7 @@
             </StackPanel>
         </Border>
     </Design.PreviewWith>
-    <ControlTheme x:Key="{x:Type AutoCompleteBox}" TargetType="AutoCompleteBox">
+    <ControlTheme x:Key="{x:Type suki:AutoCompleteBox}" TargetType="suki:AutoCompleteBox">
         <Setter Property="BorderThickness" Value="0,0,0,1" />
         <Setter Property="MinWidth" Value="100" />
         <Setter Property="BorderBrush" Value="{DynamicResource SukiControlBorderBrush}" />
@@ -43,13 +45,13 @@
                                         BoxShadow="{DynamicResource SukiPopupShadow}"
                                         CornerRadius="{DynamicResource SmallCornerRadius}">
                                     <Panel Background="{DynamicResource PopupGradientBrush}">
-                                    <ListBox Name="PART_SelectingItemsControl"
-                                             Background="{TemplateBinding Background}"
-                                             BorderThickness="0"
-                                             Foreground="{TemplateBinding Foreground}"
-                                             ItemTemplate="{TemplateBinding ItemTemplate}"
-                                             ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                                             ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                                        <ListBox Name="PART_SelectingItemsControl"
+                                                 Background="{TemplateBinding Background}"
+                                                 BorderThickness="0"
+                                                 Foreground="{TemplateBinding Foreground}"
+                                                 ItemTemplate="{TemplateBinding ItemTemplate}"
+                                                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                                 ScrollViewer.VerticalScrollBarVisibility="Auto" />
                                     </Panel>
                                 </Border>
                             </Panel>
