--- a/SukiUI/Theme/Button.axaml
+++ b/SukiUI/Theme/Button.axaml
@@ -12,6 +12,8 @@
         <Setter Property="FontFamily" Value="{DynamicResource DefaultFontFamily}" />
         <Setter Property="FontSize" Value="15" />
         <Setter Property="Padding" Value="20,8" />
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="FontWeight" Value="{DynamicResource DefaultDemiBold}" />
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Padding="{TemplateBinding Padding}"
@@ -38,7 +40,7 @@
                                           Content="{TemplateBinding Content}"
                                           FontFamily="{TemplateBinding FontFamily}"
                                           FontSize="{TemplateBinding FontSize}"
-                                          FontWeight="{DynamicResource DefaultDemiBold}"
+                                          FontWeight="{TemplateBinding FontWeight}"
                                           RecognizesAccessKey="True" />
                     </StackPanel>
                 </Border>
@@ -102,7 +104,7 @@
                 <Setter Property="Foreground" Value="{DynamicResource SukiPrimaryColor}" />
             </Style>
             <Style Selector="^ /template/ Border">
-              <!--  <Setter Property="Background" Value="{DynamicResource SukiCardBackground}" /> -->
+                <!--  <Setter Property="Background" Value="{DynamicResource SukiCardBackground}" /> -->
                 <Setter Property="BorderBrush" Value="{DynamicResource SukiPrimaryColor}" />
                 <Setter Property="RenderTransform">
                     <Setter.Value>
