--- a/SukiUI/Theme/TagsBoxStyles.xaml
+++ b/SukiUI/Theme/TagsBoxStyles.xaml
@@ -16,7 +16,7 @@
 
 
         <Setter Property="Foreground" Value="{DynamicResource SukiText}" />
-        <Setter Property="SelectionBrush" Value="{DynamicResource SukiBorderBrush}" />
+        <Setter Property="SelectionBrush" Value="{DynamicResource SukiPrimaryColor}" />
         <Setter Property="MinHeight" Value="45" />
         <Setter Property="Padding" Value="6,8,5,6" />
         <Setter Property="ContextFlyout" Value="{StaticResource DefaultTextBoxContextFlyout}" />
